Bug 58286 - HTML export: some tags like <A> not closed around frames/drawing objects
Summary: HTML export: some tags like <A> not closed around frames/drawing objects
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.1.0 target:4.0.0.0.beta2...
Keywords: regression
: 46400 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-14 13:22 UTC by contact
Modified: 2013-08-06 12:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description contact 2012-12-14 13:22:45 UTC
Problem description:

HTML link formatting (underlining) continues on the following parapragh when a HTML link has been set on an inserted image with "as character anchor" ("comme caractère" in french) inside the generated HTML file.

Steps to reproduce:
1. Insert an image
2. Anchor the image "as character"
3. Put a HTML link on it
4. Key in another text paragraph 
4. Export as an HTML file

That bug doesn't exist with Libre Office when the image anchor isn't set to "as character".

That bug never exist with Apache Open Office 3.4.1.

Current behavior:

When displaying the HTML export file, the HTML link on the image continues onto the following paragraph.

Bug explanation:

When comparing the HTML generated by Libre Office either 3.5.x ou 3.6.x and that generated using Apache Open Office 2 HTML tags </FONT></A> are missing.

Hyperlink Libre Office 3.6.4:  KO

<A HREF="https://smith.net/Livelink/livelink.exe/open/0001-0003543853/"><FONT COLOR="#333366"><IMG SRC="Image_html_4f46a32a.gif" NAME="images1" WIDTH=476 HEIGHT=356 BORDER=1></P>

Hyperlink Apache Office 3.4.1: OK

<A HREF="https://smith.net/Livelink/livelink.exe/open/0001-0003543853/"><FONT COLOR="#333366"><IMG SRC="Image_html_4f46a32a.gif" NAME="images1" WIDTH=476 HEIGHT=356 BORDER=1></FONT></A></P>

Best regards


              
Operating System: Windows XP
Last worked in: 3.4.1 release
Comment 1 Not Assigned 2012-12-17 22:16:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a923084f872b8ce13f6213827fe5b1c711e6b15f

fdo#58286: sw HTML export: fix missing end tags on FrmFmts



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Michael Stahl 2012-12-17 22:20:47 UTC
seems this bug is collateral damage from ByteString cleanup...
Comment 3 Not Assigned 2012-12-17 22:28:18 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e5282f4f6048449e7f8a9721775e5b7f9b56332&g=libreoffice-4-0

fdo#58286: sw HTML export: fix missing end tags on FrmFmts


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Not Assigned 2012-12-18 17:01:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bdce3306e84353f0d428a8ec2b74cf620ba10c63&g=libreoffice-3-6

fdo#58286: sw HTML export: fix missing end tags on FrmFmts


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2013-08-06 12:00:08 UTC
*** Bug 46400 has been marked as a duplicate of this bug. ***