fdo#58286: sw HTML export: fix missing end tags on FrmFmts

SwHTMLWriter::OutFrmFmtOptions must return a value that includes the
parameter rEndTags.

(regression from 3852a6f54880af8ed9161227baa555580c7d4517)

Change-Id: I280a0de57e254f75b69d08d93e23bf7c765058ec